--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,3 +1,188 @@
-body {
-    background-color: burlywood;
+@mixin marg-pad($margin, $padding){
+    margin: $margin;
+    padding: $padding;
+}
+$text-color: #424242;
+$link-hover-color: #bfbfbf;
+$border-color: #b38f00;
+html {
+    font-size: 16px;
+    overflow-x: hidden;
+}
+body{
+    font-family: 'Trebuchet MS', sans-serif;
+    margin:0;
+    padding:0;
+}
+.footer{
+    flex: 0 1 20px;
+    @include marg-pad(0, (5px));
+    height: 20px;
+    position:fixed;
+    border-top:1px lightgray solid;
+    width:100vw;
+    bottom:0;
+    left:0;
+    text-align: center;
+    color: gray;
+    background-color: white;
+}
+.app-container{
+    height:100vh;
+    max-width: 1200px;
+    width: 1200px;
+}
+
+.flex-container {
+    display: flex;
+}
+.row {
+    flex-direction: row;
+}
+.col{
+    flex-direction: column;
+}
+.align-items-center{
+    align-items: center;
+}
+.justify-content-center{
+    justify-content: center;
+}
+.logo-container{
+    flex: 0 1 auto;
+}
+.nav-container{
+    flex: 0 1 auto;
+}
+.content-container{
+    flex: 1 1 auto;
+}
+.logo{
+    @include marg-pad(20px, 0);
+    width: 150px;
+    height: 100px;
+    background-color: gray;
+
+}
+.nav{
+    & > a{
+        @include marg-pad((15px 35px 15px 35px), 0);
+        position: relative;
+        text-decoration: none;
+        color: $text-color;
+        font-weight: 700;
+        letter-spacing: 4px;
+        transition: .3s;
+        font-size: 1rem;
+        &:hover {
+            &::after {
+                content: "";
+                position:absolute;
+                height:30px;
+                width: 120%;
+                background-color: $border-color;
+                z-index: -1;
+                top:-5px;
+                left:-10%;
+                filter:opacity(30%);
+            }
+        }
+        &::after {
+            transition: .3s;
+            content: "";
+            position:absolute;
+            height:30px;
+            width: 0%;
+            background-color:white;
+            z-index: -1;
+            top:-5px;
+            left:50%;
+        }
+    }
+}
+.home-image{
+    padding-top: 30px;
+    position: relative;
+    width: 100%;
+    height: 50vh;
+    max-height: 700px;
+    min-height: 600px;
+    &>:nth-child(3){
+        top:58%;
+        font-weight: 100;
+        letter-spacing: 18px;
+        font-size:1.7rem;
+    }
+    & > img{
+        position: relative;
+        object-fit: contain;
+        @include marg-pad(30px,0 );
+        max-width:100%;
+        max-height:100%;
+        height: auto;
+        transition: .4s;
+        &:hover{
+            filter: grayscale(0%);
+        }
+        -webkit-box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.5); 
+box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.5);
+    }
+    &>h2{
+        position:absolute;
+        text-align: center;
+        top:50%;
+        font-size:2rem;
+        color:white;
+        letter-spacing: 8px;
+        -webkit-text-shadow: 0px 0px 5px rgba(150, 150, 150, 1); 
+        text-shadow: 0px 0px 5px rgba(150, 150, 150, 1);
+    }
+    &::before{
+        content: "";
+        position: absolute;
+        width: 45%;
+        height: 50%;
+        border: solid $border-color 1px;
+        z-index: -1;
+        background-color:$border-color;
+        filter:opacity(20%);
+
+    }
+    &::after {
+        content: "";
+        position: absolute;
+        width: calc(45% - 30px);
+        height: calc(50% + 30px);
+        border: solid black 1px;
+        z-index: -1;
+        background-color:black;
+        filter:opacity(20%);
+
+    }
+}
+@media only screen and (max-height: 600px){
+    .app-container{
+        height:600px;
+    }
+}
+@media only screen and (max-width: 860px){
+    .app-container{
+        max-width: 860px;
+        width: 100vw;
+    }
+    .home-image{
+        &::before{
+            width: 80%;
+            height: 50%;
+        }
+        &::after {
+            width: calc(80% - 30px);
+            height: calc(50% + 30px);
+        }
+    }
+}
+@media only screen and (max-width: 660px){
+    .nav{
+        display: none;
+    }
 }
