--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: SofiaFont;
+  src: url("../fonts/Sofia-Regular.ttf");
+}
 html {
   font-size: 16px;
   overflow-x: hidden;
@@ -7,27 +11,17 @@ body {
   font-family: "Trebuchet MS", sans-serif;
   margin: 0;
   padding: 0;
-}
-
-.footer {
-  flex: 0 1 20px;
-  margin: 0;
-  padding: 5px;
-  height: 20px;
-  position: fixed;
-  border-top: 1px lightgray solid;
-  width: 100vw;
-  bottom: 0;
-  left: 0;
-  text-align: center;
-  color: gray;
-  background-color: white;
+  background-color: #FFF9F3;
 }
 
 .app-container {
-  height: 100vh;
-  max-width: 1200px;
+  max-width: 100vw;
+  width: 100vw;
+}
+
+.page-container {
   width: 1200px;
+  max-width: 1200px;
 }
 
 .flex-container {
@@ -46,71 +40,147 @@ body {
   align-items: center;
 }
 
+.justify-content-right {
+  justify-content: flex-end;
+}
+
 .justify-content-center {
   justify-content: center;
 }
 
-.logo-container {
-  flex: 0 1 auto;
+.justify-content-between {
+  justify-content: space-between;
 }
 
 .nav-container {
-  flex: 0 1 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  background-color: #FFF9F3;
+  box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
+  width: 100%;
+  /*
+      position: relative;
+      &::before{
+          content: "";
+          position: absolute;
+          width: 100vw;
+          height: 140px;
+          left: 0;
+          background-color: rgb(249 234 221);
+      }
+      &::after{
+          content: "";
+          position: absolute;
+          width: 100vw;
+          height: 140px;
+          left: -100vw;
+          background-color: rgb(249 234 221);
+      }
+      flex: 0 1 auto;
+      */
+}
+.nav-container h1, .nav-container h2 {
+  text-align: center;
+  margin: 0;
+  margin-left: 20px;
+  font-style: italic;
+  font-weight: normal;
+}
+.nav-container h1 {
+  font-family: SofiaFont;
+  margin-top: 10px;
+}
+.nav-container h2 {
+  margin-bottom: 15px;
 }
 
-.content-container {
-  flex: 1 1 auto;
-}
-
-.logo {
-  margin: 20px;
-  padding: 0;
-  width: 150px;
-  height: 100px;
-  background-color: gray;
-}
-
-.nav > a {
-  margin: 15px 35px 15px 35px;
+.nav a {
+  margin: 15px 25px 15px 25px;
   padding: 0;
   position: relative;
   text-decoration: none;
-  color: #424242;
+  color: #1E1E1E;
   font-weight: 700;
-  letter-spacing: 4px;
+  letter-spacing: 1px;
   transition: 0.3s;
-  font-size: 1rem;
+  font-size: 1.15rem;
+  text-align: center;
+  z-index: 40;
 }
-.nav > a:hover::after {
+.nav a:hover::after {
   content: "";
-  position: absolute;
-  height: 30px;
   width: 120%;
-  background-color: #b38f00;
   z-index: -1;
-  top: -5px;
   left: -10%;
-  filter: opacity(30%);
 }
-.nav > a::after {
+.nav a::after {
+  background-color: #AA81AA;
   transition: 0.3s;
   content: "";
   position: absolute;
-  height: 30px;
+  height: 13px;
   width: 0%;
-  background-color: white;
   z-index: -1;
-  top: -5px;
+  top: 10px;
   left: 50%;
 }
 
-.home-image {
-  padding-top: 30px;
+.social-media {
+  background-color: #AA81AA;
+  width: 340px;
+}
+.social-media > img {
+  margin: 15px;
+  width: 48px;
+  height: 48px;
+  z-index: 30;
+}
+
+.content-container {
+  background-color: #FFF9F3;
+  box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
+}
+
+.home-text {
   position: relative;
+  width: auto;
+  padding: 50px;
+  background: url("../img/landingImg.jpg") no-repeat;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.home-text h2, .home-text p {
+  z-index: 10;
+}
+.home-text p {
+  font-size: 1.15rem;
+}
+.home-text h2 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 4.5rem;
+  font-family: SofiaFont;
+  font-weight: normal;
+}
+.home-text::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
   width: 100%;
-  height: 50vh;
-  max-height: 700px;
-  min-height: 600px;
+  height: 100%;
+  background: linear-gradient(90deg, #fff9f3 0%, rgba(255, 249, 243, 0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fff9f3",endColorstr="#fff9f3",GradientType=1);
+}
+
+.home-image {
+  position: relative;
+  min-height: 100%;
+  min-width: 33%;
+  width: 33%;
+  box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.25);
+  z-index: 15;
 }
 .home-image > :nth-child(3) {
   top: 58%;
@@ -120,60 +190,72 @@ body {
 }
 .home-image > img {
   position: relative;
-  object-fit: contain;
-  margin: 30px;
-  padding: 0;
+  object-fit: cover;
   max-width: 100%;
+  min-height: 100%;
   max-height: 100%;
-  height: auto;
   transition: 0.4s;
-  box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.5);
 }
-.home-image > img:hover {
-  filter: grayscale(0%);
+
+.home-container {
+  height: 710px;
 }
-.home-image > h2 {
-  position: absolute;
-  text-align: center;
-  top: 50%;
+
+.btn {
+  background-color: #AA81AA;
   font-size: 2rem;
-  color: white;
-  letter-spacing: 8px;
-  -webkit-text-shadow: 0px 0px 5px #969696;
-  text-shadow: 0px 0px 5px #969696;
-}
-.home-image::before {
-  content: "";
-  position: absolute;
-  width: 45%;
-  height: 50%;
-  border: solid #b38f00 1px;
-  z-index: -1;
-  background-color: #b38f00;
-  filter: opacity(20%);
-}
-.home-image::after {
-  content: "";
-  position: absolute;
-  width: calc(45% - 30px);
-  height: calc(50% + 30px);
-  border: solid black 1px;
-  z-index: -1;
-  background-color: black;
-  filter: opacity(20%);
+  border-radius: 10px;
+  z-index: 20;
+  border: none;
+  width: 250px;
+  padding: 5px;
+  margin-top: 30px;
+  font-weight: 700;
 }
 
-@media only screen and (max-height: 600px) {
-  .app-container {
-    height: 600px;
-  }
+.footer {
+  flex: 0 1 20px;
+  margin: 0;
+  padding: 5px;
+  height: 20px;
+  position: fixed;
+  border-top: 1px lightgray solid;
+  width: 100vw;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  color: gray;
+  background-color: white;
 }
+
+.logo {
+  margin: 20px;
+  padding: 0;
+  width: 150px;
+  height: 100px;
+  background-color: gray;
+  z-index: 10;
+}
+
+.logo-name {
+  z-index: 10;
+  margin-top: 30px;
+}
+.logo-name > h1, .logo-name h2 {
+  color: #1E1E1E;
+  margin: 0;
+}
+
+.offer-container {
+  text-align: center;
+  background-color: #fff5cc;
+  padding: 0px 60px 40px 60px;
+}
+.offer-container p {
+  margin: 4px;
+}
+
 @media only screen and (max-width: 860px) {
-  .app-container {
-    max-width: 860px;
-    width: 100vw;
-  }
-
   .home-image::before {
     width: 80%;
     height: 50%;
@@ -181,10 +263,5 @@ body {
   .home-image::after {
     width: calc(80% - 30px);
     height: calc(50% + 30px);
-  }
-}
-@media only screen and (max-width: 660px) {
-  .nav {
-    display: none;
   }
 }
