--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -2,9 +2,16 @@
     margin: $margin;
     padding: $padding;
 }
-$text-color: #424242;
+$text-color:#1E1E1E;
 $link-hover-color: #bfbfbf;
 $border-color: #b38f00;
+$first-color: #AA81AA;
+
+@font-face {
+    font-family: SofiaFont;
+    src: url("../fonts/Sofia-Regular.ttf");
+  }
+
 html {
     font-size: 16px;
     overflow-x: hidden;
@@ -13,7 +20,235 @@ body{
     font-family: 'Trebuchet MS', sans-serif;
     margin:0;
     padding:0;
+    background-color: #FFF9F3;
 }
+
+.app-container{
+    max-width: 100vw;
+    width: 100vw;
+}
+.page-container{
+   width:1200px;
+   max-width:1200px; 
+}
+.flex-container {
+    display: flex;
+}
+.row {
+    flex-direction: row;
+}
+.col{
+    flex-direction: column;
+}
+.align-items-center{
+    align-items: center;
+}
+.justify-content-right{
+    justify-content: flex-end;
+}
+.justify-content-center{
+    justify-content: center;
+}
+.justify-content-between{
+    justify-content: space-between;
+}
+.nav-container{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color: #FFF9F3;
+    box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
+    width: 100%;
+    & h1, h2{
+        text-align: center;
+        margin: 0;
+        margin-left: 20px;
+        font-style: italic;
+        font-weight: normal;
+    }
+    & h1{
+        font-family: SofiaFont;
+        margin-top: 10px;
+    }
+    & h2{
+        margin-bottom: 15px;
+    }
+/*
+    position: relative;
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100vw;
+        height: 140px;
+        left: 0;
+        background-color: rgb(249 234 221);
+    }
+    &::after{
+        content: "";
+        position: absolute;
+        width: 100vw;
+        height: 140px;
+        left: -100vw;
+        background-color: rgb(249 234 221);
+    }
+    flex: 0 1 auto;
+    */
+}
+.nav{
+    & a{
+        @include marg-pad((15px 25px 15px 25px), 0);
+        position: relative;
+        text-decoration: none;
+        color: $text-color;
+        font-weight: 700;
+        letter-spacing: 1px;
+        transition: .3s;
+        font-size: 1.15rem;
+        text-align: center;
+        z-index: 40;
+        &:hover {
+            &::after {
+                content: "";
+                width: 120%;
+                z-index: -1;
+                left:-10%;
+            }
+        }
+        &::after {
+            background-color: $first-color;
+            transition: .3s;
+            content: "";
+            position:absolute;
+            height:13px;
+            width: 0%;
+            z-index: -1;
+            top:10px;
+            left:50%;
+        }
+    }
+}
+
+.social-media{
+    background-color: $first-color;
+    width: 340px;
+    &> img{
+        margin: 15px;
+        width: 48px;
+        height: 48px;
+        z-index: 30;
+    }
+}
+.content-container{
+    background-color: #FFF9F3;
+    box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
+}
+.home-text{
+    position: relative;
+    width:auto;
+    padding: 50px;
+    background: url('../img/landingImg.jpg') no-repeat;
+    background-repeat: no-repeat;
+    background-position: center; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
+    & h2,p {
+        z-index: 10;
+    }
+    & p {
+        font-size: 1.15rem;
+    }
+
+    & h2{
+        margin-top: 20px;
+        margin-bottom: 20px;
+        font-size: 4.5rem;
+        font-family: SofiaFont;
+        font-weight: normal;
+    }
+
+    &::after{
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: "";
+        width: 100%;
+        height: 100%;
+        background: -moz-linear-gradient(90deg, rgba(255,249,243,1) 0%, rgba(255,249,243,0) 100%);
+        background: -webkit-linear-gradient(90deg, rgba(255,249,243,1) 0%, rgba(255,249,243,0) 100%);
+        background: linear-gradient(90deg, rgba(255,249,243,1) 0%, rgba(255,249,243,0) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fff9f3",endColorstr="#fff9f3",GradientType=1);   
+    }
+}
+.home-image{
+    position: relative;
+    min-height:100%;
+    min-width:33%;
+    width:33%;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.25);
+    z-index: 15;
+    &>:nth-child(3){
+        top:58%;
+        font-weight: 100;
+        letter-spacing: 18px;
+        font-size:1.7rem;
+    }
+    & > img{
+        position: relative;
+        object-fit: cover;
+        max-width:100%;
+        min-height:100%;
+        max-height:100%;
+        transition: .4s;
+    }
+}
+.home-container{
+    height: 710px;
+}
+.btn{
+    background-color: $first-color;
+    font-size: 2rem;
+    border-radius: 10px;
+    z-index: 20;
+    border: none;
+    width: 250px;
+    padding: 5px;
+    margin-top: 30px;
+    font-weight: 700;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .footer{
     flex: 0 1 20px;
     @include marg-pad(0, (5px));
@@ -27,149 +262,32 @@ body{
     color: gray;
     background-color: white;
 }
-.app-container{
-    height:100vh;
-    max-width: 1200px;
-    width: 1200px;
-}
 
-.flex-container {
-    display: flex;
-}
-.row {
-    flex-direction: row;
-}
-.col{
-    flex-direction: column;
-}
-.align-items-center{
-    align-items: center;
-}
-.justify-content-center{
-    justify-content: center;
-}
-.logo-container{
-    flex: 0 1 auto;
-}
-.nav-container{
-    flex: 0 1 auto;
-}
-.content-container{
-    flex: 1 1 auto;
-}
 .logo{
-    @include marg-pad(20px, 0);
+    @include marg-pad((20px), 0);
     width: 150px;
     height: 100px;
     background-color: gray;
-
+    z-index: 10;
 }
-.nav{
-    & > a{
-        @include marg-pad((15px 35px 15px 35px), 0);
-        position: relative;
-        text-decoration: none;
+.logo-name{
+    z-index: 10;
+    margin-top: 30px;
+    &> h1,h2{
         color: $text-color;
-        font-weight: 700;
-        letter-spacing: 4px;
-        transition: .3s;
-        font-size: 1rem;
-        &:hover {
-            &::after {
-                content: "";
-                position:absolute;
-                height:30px;
-                width: 120%;
-                background-color: $border-color;
-                z-index: -1;
-                top:-5px;
-                left:-10%;
-                filter:opacity(30%);
-            }
-        }
-        &::after {
-            transition: .3s;
-            content: "";
-            position:absolute;
-            height:30px;
-            width: 0%;
-            background-color:white;
-            z-index: -1;
-            top:-5px;
-            left:50%;
-        }
+        margin: 0;
     }
 }
-.home-image{
-    padding-top: 30px;
-    position: relative;
-    width: 100%;
-    height: 50vh;
-    max-height: 700px;
-    min-height: 600px;
-    &>:nth-child(3){
-        top:58%;
-        font-weight: 100;
-        letter-spacing: 18px;
-        font-size:1.7rem;
-    }
-    & > img{
-        position: relative;
-        object-fit: contain;
-        @include marg-pad(30px,0 );
-        max-width:100%;
-        max-height:100%;
-        height: auto;
-        transition: .4s;
-        &:hover{
-            filter: grayscale(0%);
-        }
-        -webkit-box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.5); 
-box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.5);
-    }
-    &>h2{
-        position:absolute;
-        text-align: center;
-        top:50%;
-        font-size:2rem;
-        color:white;
-        letter-spacing: 8px;
-        -webkit-text-shadow: 0px 0px 5px rgba(150, 150, 150, 1); 
-        text-shadow: 0px 0px 5px rgba(150, 150, 150, 1);
-    }
-    &::before{
-        content: "";
-        position: absolute;
-        width: 45%;
-        height: 50%;
-        border: solid $border-color 1px;
-        z-index: -1;
-        background-color:$border-color;
-        filter:opacity(20%);
 
-    }
-    &::after {
-        content: "";
-        position: absolute;
-        width: calc(45% - 30px);
-        height: calc(50% + 30px);
-        border: solid black 1px;
-        z-index: -1;
-        background-color:black;
-        filter:opacity(20%);
-
-    }
-}
-@media only screen and (max-height: 600px){
-    .app-container{
-        height:600px;
+.offer-container{
+    text-align: center;
+    background-color:#fff5cc;
+    padding: 0px 60px 40px 60px;
+    & p {
+        margin:4px;
     }
 }
 @media only screen and (max-width: 860px){
-    .app-container{
-        max-width: 860px;
-        width: 100vw;
-    }
     .home-image{
         &::before{
             width: 80%;
@@ -179,10 +297,5 @@ box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.5);
             width: calc(80% - 30px);
             height: calc(50% + 30px);
         }
-    }
-}
-@media only screen and (max-width: 660px){
-    .nav{
-        display: none;
     }
 }
