--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,6 +14,22 @@ body {
   background-color: #FFF9F3;
 }
 
+.mt-30 {
+  margin-top: 30px;
+}
+
+.mt-15 {
+  margin-top: 15px;
+}
+
+.mt-60 {
+  margin-top: 120px;
+}
+
+.mb-120 {
+  margin-bottom: 120px;
+}
+
 .app-container {
   max-width: 100vw;
   width: 100vw;
@@ -199,6 +215,8 @@ body {
 
 .home-container {
   height: 710px;
+  background-color: #FFF9F3;
+  box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
 }
 
 .btn {
@@ -209,23 +227,311 @@ body {
   border: none;
   width: 250px;
   padding: 5px;
-  margin-top: 30px;
+  font-weight: 700;
+  transition: 0.3s;
+}
+.btn:hover {
+  background-color: #c1a4c1;
+  cursor: pointer;
+}
+
+.example-gallery {
+  background-color: #FFF9F3;
+  margin-top: 120px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+}
+.example-gallery .image {
+  box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
+  position: relative;
+  margin: 10px;
+  flex: 23%;
+  overflow: hidden;
+  cursor: pointer;
+  max-width: 300px;
+  max-height: 300px;
+}
+.example-gallery .image:nth-child(1), .example-gallery .image:nth-child(5) {
+  margin-left: 0px;
+}
+.example-gallery .image:nth-child(4), .example-gallery .image:nth-child(8) {
+  margin-right: 0px;
+}
+.example-gallery img {
+  width: 100%;
+  height: 100%;
+  transition: 0.4s;
+  object-fit: cover;
+}
+.example-gallery .image:hover img {
+  transform: scale(1.4);
+  filter: blur(3px);
+}
+.example-gallery .image:hover::after {
+  content: "See More";
+  opacity: 1;
+  top: 0;
+}
+.example-gallery .image::after {
+  content: "";
+  transition: 0.3s;
+  color: #1E1E1E;
+  text-align: center;
+  background-color: #AA81AA;
+  transition: 0.3s;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: -50%;
+  left: 0;
+  padding: 45% 0 45% 0;
+  font-size: 2rem;
+  opacity: 0;
   font-weight: 700;
 }
 
+.contact-form {
+  z-index: 1;
+  position: relative;
+  background: url("../img/landingImg.jpg") no-repeat;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 600px;
+  background-color: #FFF9F3;
+  box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
+  margin: 45px 0 45px 45px;
+  padding: 30px 30px 20px 30px;
+}
+.contact-form h1, .contact-form label, .contact-form input[type=text], .contact-form textarea {
+  z-index: 10;
+}
+.contact-form h1 {
+  font-family: SofiaFont;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: 900;
+  font-size: 3rem;
+}
+.contact-form label {
+  font-weight: 700;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-bottom: 2px;
+  letter-spacing: 1px;
+}
+.contact-form::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, #fff9f3 0%, rgba(255, 249, 243, 0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fff9f3",endColorstr="#fff9f3",GradientType=1);
+}
+
+.contact-info {
+  position: relative;
+  background: url("../img/landingImg.jpg") no-repeat;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  z-index: -5;
+  width: 500px;
+  height: 551px;
+  z-index: 0;
+}
+.contact-info div {
+  z-index: 20;
+}
+.contact-info h1, .contact-info p {
+  font-size: 1.5rem;
+  text-align: center;
+  font-family: SofiaFont;
+  z-index: 20;
+}
+.contact-info h1 {
+  font-size: 2rem;
+  font-weight: 700;
+}
+.contact-info::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, #fff9f3 0%, rgba(255, 249, 243, 0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fff9f3",endColorstr="#fff9f3",GradientType=1);
+}
+
+.contact-decoration {
+  position: relative;
+}
+.contact-decoration::before {
+  position: absolute;
+  content: "";
+  background-color: #AA81AA;
+  width: 430px;
+  height: 100%;
+  z-index: 0;
+}
+
+input[type=text], textarea {
+  height: 40px;
+  padding: 10px;
+  box-sizing: border-box;
+  border: none;
+  background-color: #E0C6E0;
+  font-size: 1rem;
+  font-weight: 900;
+  max-width: 550px;
+  min-width: 550px;
+  color: #1E1E1E;
+}
+input[type=text]:focus, input[type=text]:active, textarea:focus, textarea:active {
+  outline: none;
+}
+
+::placeholder {
+  color: #AA81AA;
+  opacity: 1;
+  /* Firefox */
+  font-size: 0.9rem;
+  font-weight: 700;
+  letter-spacing: 2px;
+}
+
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #AA81AA;
+}
+
+::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: #AA81AA;
+}
+
+textarea {
+  height: 100px;
+  max-width: 550px;
+  min-width: 550px;
+  max-height: 550px;
+  min-height: 32px;
+}
+textarea::placeholder {
+  color: #AA81AA;
+  opacity: 1;
+  /* Firefox */
+  font-size: 1rem;
+  font-family: "Trebuchet MS", sans-serif;
+  font-weight: 700;
+}
+
+.loading-spinner {
+  width: 50px;
+  height: 50px;
+  border: 3px solid #1E1E1E;
+  border-radius: 50%;
+  border-top-color: #AA81AA;
+  animation: 1s spin infinite linear;
+  transition: 0.5s;
+}
+
+.spin-container {
+  display: none;
+  position: absolute;
+  top: 0px;
+}
+.spin-container.anim-in {
+  animation: anim-in ease-in-out 0.5s;
+  animation-fill-mode: forwards;
+}
+.spin-container.anim-out {
+  animation: anim-out ease-in-out 0.5s;
+  animation-fill-mode: forwards;
+}
+
 .footer {
-  flex: 0 1 20px;
-  margin: 0;
+  position: fixed;
+  margin: 30px 0 0 0;
   padding: 5px;
   height: 20px;
-  position: fixed;
   border-top: 1px lightgray solid;
   width: 100vw;
+  text-align: center;
   bottom: 0;
   left: 0;
+  color: #FFF9F3;
+  background-color: #AA81AA;
+}
+
+.bottom-links {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  padding: 5px 0 40px 0;
+  box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
+}
+.bottom-links a {
+  margin: 15px 25px 15px 25px;
+  padding: 0;
+  position: relative;
+  text-decoration: none;
+  color: #1E1E1E;
+  font-weight: 500;
+  letter-spacing: 1px;
+  transition: 0.3s;
+  font-size: 1.1rem;
   text-align: center;
-  color: gray;
-  background-color: white;
+}
+.bottom-links a:hover {
+  color: #AA81AA;
+}
+
+.background-text h1 {
+  /* IE 9 */
+  transform: skew(20deg, 10deg);
+  /* Standard syntax */
+  top: 15%;
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  color: #AA81AA;
+  font-family: SofiaFont;
+  font-size: 25vw;
+  opacity: 0.2;
+  z-index: -10;
+  text-shadow: 0px 0px 10px #969696;
+}
+
+.section-title {
+  position: relative;
+}
+.section-title h1 {
+  z-index: 10;
+  top: 0px;
+  position: absolute;
+  margin: 10px 0 0 0;
+  font-family: SofiaFont;
+  font-size: 4rem;
+  width: 100%;
+  letter-spacing: 3px;
+  text-align: center;
+}
+.section-title h1::after {
+  position: absolute;
+  top: 70px;
+  left: 0;
+  content: "";
+  width: 100%;
+  height: 20px;
+  background-color: #AA81AA;
+  z-index: -1;
 }
 
 .logo {
@@ -246,15 +552,6 @@ body {
   margin: 0;
 }
 
-.offer-container {
-  text-align: center;
-  background-color: #fff5cc;
-  padding: 0px 60px 40px 60px;
-}
-.offer-container p {
-  margin: 4px;
-}
-
 @media only screen and (max-width: 860px) {
   .home-image::before {
     width: 80%;
@@ -263,5 +560,20 @@ body {
   .home-image::after {
     width: calc(80% - 30px);
     height: calc(50% + 30px);
+  }
+}
+@media screen and (max-width: 960px) {
+  .example-gallery .image {
+    flex: 33.33%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .example-gallery .image {
+    flex: 50%;
+  }
+}
+@media screen and (max-width: 480px) {
+  .example-gallery .image {
+    flex: 100%;
   }
 }
