--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -6,6 +6,8 @@ $text-color:#1E1E1E;
 $link-hover-color: #bfbfbf;
 $border-color: #b38f00;
 $first-color: #AA81AA;
+$first-color-hover:#c1a4c1;
+$background-color: #FFF9F3;
 
 @font-face {
     font-family: SofiaFont;
@@ -20,9 +22,20 @@ body{
     font-family: 'Trebuchet MS', sans-serif;
     margin:0;
     padding:0;
-    background-color: #FFF9F3;
+    background-color: $background-color;
 }
-
+.mt-30{
+    margin-top: 30px;
+}
+.mt-15{
+    margin-top: 15px;
+}
+.mt-60{
+    margin-top: 120px;
+}
+.mb-120{
+    margin-bottom: 120px;
+}
 .app-container{
     max-width: 100vw;
     width: 100vw;
@@ -205,6 +218,8 @@ body{
 }
 .home-container{
     height: 710px;
+    background-color: #FFF9F3;
+    box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
 }
 .btn{
     background-color: $first-color;
@@ -214,54 +229,345 @@ body{
     border: none;
     width: 250px;
     padding: 5px;
-    margin-top: 30px;
     font-weight: 700;
+    transition: .3s;
+    &:hover{
+        background-color: $first-color-hover;
+        cursor: pointer;
+    }
 }
+.example-gallery{
+    background-color: $background-color;
+    margin-top: 120px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    & .image{
+        box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
+        position: relative;
+        margin: 10px;
+        flex: 23%;
+        overflow: hidden;
+        cursor: pointer;
+        max-width: 300px;
+        max-height: 300px;
+        &:nth-child(1),&:nth-child(5){
+            margin-left: 0px;
+        }
+        &:nth-child(4),&:nth-child(8){
+            margin-right: 0px;
+        }
+    }
+    & img {
+        width: 100%;
+        height: 100%;
+        transition: 0.4s;
+        object-fit: cover;
+    }
+    & .image:hover img{
+        transform: scale(1.4);
+        filter:blur(3px);
+    }
+    & .image:hover {
+        &::after {
+            content: "See More";
+            opacity: 1;
+            top:0;
+        }
+    }
+    & .image::after {
+        content: "";
+        transition: .3s;
+        color: $text-color;
+        text-align: center;
+        background-color: $first-color;
+        transition: .3s;
+        position:absolute;
+        height:100%;
+        width: 100%;
+        top:-50%;
+        left:0;
+        padding: 45% 0 45% 0;
+        font-size: 2rem;
+        opacity: 0;
+        font-weight: 700;
+    }
+}
+.contact-form{
+    z-index: 1;
+    position: relative;
+    background: url('../img/landingImg.jpg') no-repeat;
+    background-repeat: no-repeat;
+    background-position: center; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 
+    & h1,label,input[type=text], textarea{
+        z-index: 10;
+    }
 
+    & h1{
+        font-family: SofiaFont;
+        margin-top: 0;
+        margin-bottom: 0;
+        font-weight: 900;
+        font-size: 3rem;
+    }
+    & label {
+        font-weight: 700;
+        margin-top: 10px;
+        margin-left: 10px;
+        margin-bottom:2px;
+        letter-spacing: 1px;
+    }
+    width: 600px;
+    background-color: #FFF9F3;
+    box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
+    margin: 45px 0 45px 45px;
+    padding: 30px 30px 20px 30px;
+    &::after{
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: "";
+        width: 100%;
+        height: 100%;
+        background: -moz-linear-gradient(90deg, rgba(255,249,243,1) 0%, rgba(255,249,243,0) 100%);
+        background: -webkit-linear-gradient(90deg, rgba(255,249,243,1) 0%, rgba(255,249,243,0) 100%);
+        background: linear-gradient(90deg, rgba(255,249,243,1) 0%, rgba(255,249,243,0) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fff9f3",endColorstr="#fff9f3",GradientType=1);   
+    }
+}
+.contact-info{
+    position: relative;
+    background: url('../img/landingImg.jpg') no-repeat;
+    background-repeat: no-repeat;
+    background-position: center; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    z-index: -5;
+    width: 500px;
+    height:551px;
+    z-index: 0;
+    & div {
+        z-index: 20;
+    }
+    & h1,p{
+        font-size: 1.5rem;
+        text-align: center;
+        font-family: SofiaFont;
+        z-index: 20;
+    }
+    & h1{
+        font-size: 2rem;
+        font-weight: 700;
+    }
+    &::after{
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: "";
+        width: 100%;
+        height: 100%;
+        background: -moz-linear-gradient(90deg, rgba(255,249,243,1) 0%, rgba(255,249,243,0) 100%);
+        background: -webkit-linear-gradient(90deg, rgba(255,249,243,1) 0%, rgba(255,249,243,0) 100%);
+        background: linear-gradient(90deg, rgba(255,249,243,1) 0%, rgba(255,249,243,0) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fff9f3",endColorstr="#fff9f3",GradientType=1);   
+    }
+}
+.contact-decoration{
+    position: relative;
+    &::before{
+        position: absolute;
+        content: "";
+        background-color: $first-color;
+        width: 430px;
+        height: 100%;
+        z-index: 0;
+    }
+}
+input[type=text], textarea {
+    height: 40px;
+    padding: 10px;
+    box-sizing: border-box;
+    border: none;
+    background-color: #E0C6E0;
+    font-size: 1rem;
+    font-weight: 900;
+    max-width: 550px;
+    min-width: 550px;
+    color: $text-color;
 
+    &:focus, &:active {
+        outline: none;
+    }
+}
+::placeholder {
+    color: $first-color;
+    opacity: 1; /* Firefox */
+    font-size: 0.9rem;
+    font-weight: 700;
+    letter-spacing: 2px;
+  }
+  
+  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color: $first-color;
+  }
+  
+  ::-ms-input-placeholder { /* Microsoft Edge */
+   color:$first-color;
+  }
+textarea{
+    &::placeholder {
+        color: $first-color;
+        opacity: 1; /* Firefox */
+        font-size: 1rem;
+        font-family: 'Trebuchet MS', sans-serif;
+        font-weight: 700;
+      }
+    height:100px;
+    max-width:550px;
+    min-width:550px;
+    max-height:550px;
+    min-height: 32px;
+}
+.loading-spinner {
+    width: 50px;
+    height: 50px;
+    border: 3px solid $text-color;
+    border-radius: 50%;
+    border-top-color: $first-color;
+    animation: 1s spin infinite linear;
+    transition: .5s;
+}
+.spin-container {
+    display: none;
+    position: absolute;
+    top: 0px;
 
+    &.anim-in {
+        animation: anim-in ease-in-out .5s;
+        animation-fill-mode: forwards;
+    }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    &.anim-out {
+        animation: anim-out ease-in-out .5s;
+        animation-fill-mode: forwards;
+    }
+}
 .footer{
-    flex: 0 1 20px;
-    @include marg-pad(0, (5px));
+    position: fixed;
+    @include marg-pad((30px 0 0 0), (5px));
     height: 20px;
-    position:fixed;
     border-top:1px lightgray solid;
     width:100vw;
-    bottom:0;
-    left:0;
     text-align: center;
-    color: gray;
-    background-color: white;
+    bottom: 0;
+    left: 0;
+    color: $background-color;
+    background-color: $first-color;
 }
+.bottom-links{
+    position: fixed;
+    width:100%;
+    bottom: 0;
+    left:0;
+    padding: 5px 0 40px 0;
+    box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
+    & a{
+        @include marg-pad((15px 25px 15px 25px), 0);
+        position: relative;
+        text-decoration: none;
+        color: $text-color;
+        font-weight: 500;
+        letter-spacing: 1px;
+        transition: .3s;
+        font-size: 1.10rem;
+        text-align: center;
+        &:hover {
+            color: $first-color;
+        }
+    }
+}
+.background-text{
+    & h1 {
+        -ms-transform: skew(20deg,10deg); /* IE 9 */
+  transform: skew(20deg,10deg); /* Standard syntax */
+        top:15%;
+        margin:0;
+        padding: 0;
+        position: fixed;
+        color: $first-color;
+        font-family: SofiaFont;
+        font-size: 25vw;
+        opacity: .2;
+        z-index: -10;
+        text-shadow: 0px 0px 10px rgba(150, 150, 150, 1);
+    }
+}
+.section-title{
+    position:relative;
+    & h1{
+        z-index:10;
+        top:0px;
+        position: absolute;
+        margin:10px 0 0 0;
+        font-family: SofiaFont;
+        font-size: 4rem;
+        width:100%;
+        letter-spacing: 3px;
+  
+        text-align: center;
+        &::after{
+            position: absolute;
+            top: 70px;
+            left: 0;
+            content: "";
+            width: 100%;
+            height: 20px; 
+            background-color:$first-color; 
+            z-index: -1;
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .logo{
     @include marg-pad((20px), 0);
@@ -279,14 +585,6 @@ body{
     }
 }
 
-.offer-container{
-    text-align: center;
-    background-color:#fff5cc;
-    padding: 0px 60px 40px 60px;
-    & p {
-        margin:4px;
-    }
-}
 @media only screen and (max-width: 860px){
     .home-image{
         &::before{
@@ -299,3 +597,25 @@ body{
         }
     }
 }
+
+
+
+
+
+@media screen and (max-width:960px) {
+    .example-gallery .image{
+      flex: 33.33%;
+    }
+  }
+  
+  @media screen and (max-width:768px) {
+    .example-gallery .image{
+      flex: 50%;
+    }
+  }
+  
+  @media screen and (max-width:480px) {
+    .example-gallery .image{
+      flex: 100%;
+    }
+  }
