--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -147,9 +147,14 @@ body {
 }
 .social-media > img {
   margin: 15px;
-  width: 48px;
-  height: 48px;
+  width: 42px;
+  height: 42px;
   z-index: 30;
+  transition: 0.3s;
+}
+.social-media > img:hover {
+  transform: scale(1.3, 1.3);
+  cursor: pointer;
 }
 
 .content-container {
