--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -145,9 +145,14 @@ body{
     width: 340px;
     &> img{
         margin: 15px;
-        width: 48px;
-        height: 48px;
+        width: 42px;
+        height: 42px;
         z-index: 30;
+        transition:.3s;
+        &:hover{
+            transform: scale(1.3,1.3);
+            cursor: pointer;
+        }
     }
 }
 .content-container{
