Responsiveness and mobile menu changes

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -69,6 +69,10 @@ body {
 }
 
 .nav-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: relative;
   margin-top: 20px;
   margin-bottom: 20px;
   background-color: #FFF9F3;
@@ -110,6 +114,11 @@ body {
   margin-bottom: 15px;
 }
 
+.nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .nav a {
   margin: 15px 25px 15px 25px;
   padding: 0;
@@ -142,6 +151,10 @@ body {
 }
 
 .social-media {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
   background-color: #AA81AA;
   width: 340px;
 }
@@ -165,7 +178,7 @@ body {
 .home-text {
   position: relative;
   width: auto;
-  padding: 50px;
+  padding: 50px 100px 50px 50px;
   background: url("../img/landingImg.jpg") no-repeat;
   background-repeat: no-repeat;
   background-position: center;
@@ -197,8 +210,8 @@ body {
 
 .offer-text {
   position: relative;
-  width: 950px;
-  padding: 50px 50px 50px 200px;
+  width: 800px;
+  padding: 50px 200px 50px 200px;
   background: url("../img/landingImg.jpg") no-repeat;
   background-repeat: no-repeat;
   background-position: center;
@@ -267,9 +280,14 @@ body {
 }
 
 .section-container {
-  height: 710px;
-  background-color: #FFF9F3;
-  box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
+  min-height: 710px;
+  height: 83vh;
+  background-color: black;
+}
+
+.offer-container {
+  min-height: 710px;
+  width: 100%;
 }
 
 .shadow-container {
@@ -294,12 +312,16 @@ body {
 }
 
 .example-work {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   margin-top: 40px;
   margin-bottom: 40px;
   width: 100%;
 }
 
 .content-card {
+  flex-direction: column;
   height: 600px;
   width: 380px;
   background-color: #FFF9F3;
@@ -316,6 +338,7 @@ body {
   font-size: 2rem;
   font-weight: bold;
 }
+
 .card-desc {
   height: 160px;
   margin: 30px 30px 0px 30px;
@@ -587,10 +610,6 @@ textarea {
   z-index: -1;
 }
 
-.offer-container {
-  width: 100%;
-}
-
 .portfolio-container {
   padding: 30px;
   width: 1140px;
@@ -626,24 +645,659 @@ textarea {
   margin-bottom: 30px;
 }
 
-.logo {
-  margin: 20px;
-  padding: 0;
-  width: 150px;
-  height: 100px;
-  background-color: gray;
-  z-index: 10;
+.nav-item {
+  flex-direction: row;
 }
 
-.logo-name {
-  z-index: 10;
-  margin-top: 30px;
+.menu-button {
+  width: 0;
+  display: none;
 }
-.logo-name > h1, .logo-name h2 {
-  color: #1E1E1E;
+
+.arrow {
+  display: none;
+}
+
+.contact-form-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.section-transition {
+  z-index: 40;
+  background: #fff9f3;
+  background: linear-gradient(0deg, #fff9f3 5%, rgba(204, 161, 204, 0) 17%, rgba(225, 184, 225, 0) 83%, #fff9f3 95%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fff9f3",endColorstr="#fff9f3",GradientType=1);
+}
+
+@media only screen and (max-width: 1200px) {
+  .portfolio-container {
+    margin: 0 20px 100px 20px;
+    padding: 0;
+    width: 100vw;
+    padding-top: 30px;
+  }
+
+  .offer-text {
+    padding: 0 50px 0 50px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100vw;
+    height: auto;
+    min-height: 100vh;
+  }
+
+  .contact-form-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .contact-info {
+    margin-bottom: 40px;
+    height: 400px;
+  }
+
+  .contact-form {
+    margin-left: 0;
+  }
+
+  .home-text {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+  .home-text h2 {
+    margin-top: 0;
+  }
+
+  .nav-container {
+    max-height: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    display: block;
+    flex-direction: unset;
+    justify-content: unset;
+  }
+  .nav-container h1 {
+    display: none;
+  }
+
+  .content-container {
+    width: 100vw;
+  }
+
+  .card-desc {
+    width: 50%;
+  }
+
+  .card-link {
+    position: absolute;
+    top: 180px;
+    left: 380px;
+  }
+
+  .example-work {
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+  }
+
+  .content-card {
+    position: relative;
+    flex-wrap: wrap;
+    flex-direction: row;
+    height: 240px;
+    width: 90vw;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 50%;
+    transform: translateX(-50%);
+  }
+  .content-card img {
+    min-width: 240px;
+    height: 240px;
+    min-height: 240px;
+    margin: 0;
+    object-fit: cover;
+  }
+  .content-card h3 {
+    margin-top: 0;
+    font-size: 2rem;
+    font-weight: bold;
+  }
+
+  .home-image {
+    display: none;
+    position: fixed;
+    min-height: unset;
+    min-width: unset;
+    width: unset;
+    box-shadow: unset;
+    z-index: unset;
+  }
+  .home-image > :nth-child(3) {
+    top: unset;
+    font-weight: unset;
+    letter-spacing: unset;
+    font-size: unset;
+  }
+  .home-image > img {
+    position: relative;
+    object-fit: unset;
+    max-width: unset;
+    min-height: unset;
+    max-height: unset;
+    transition: unset;
+  }
+
+  .section-container {
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .page-container {
+    width: 100vw;
+  }
+
+  .offer-container {
+    width: 100vw;
+  }
+
+  .nav-container {
+    width: 100%;
+  }
+
+  .menu-button {
+    top: 33px;
+    right: 30px;
+    z-index: 30;
+    display: flex;
+    position: fixed;
+    width: 40px;
+    height: 36px;
+    cursor: pointer;
+  }
+  .menu-button > div:nth-child(1) {
+    background-color: #1E1E1E;
+    top: 0;
+  }
+  .menu-button > div:nth-child(2) {
+    background-color: #1E1E1E;
+    top: 15px;
+  }
+  .menu-button > div:nth-child(3) {
+    background-color: #1E1E1E;
+    top: 30px;
+  }
+  .menu-button.hover > div:nth-child(1) {
+    transform: translateY(-3px);
+    filter: brightness(80%);
+  }
+  .menu-button.hover > div:nth-child(2) {
+    filter: brightness(80%);
+  }
+  .menu-button.hover > div:nth-child(3) {
+    transform: translateY(3px);
+    filter: brightness(80%);
+  }
+  .menu-button.open > div:nth-child(1) {
+    background-color: #FFF9F3;
+    transform: rotate(45deg) translateY(14.5px) translateX(7px);
+  }
+  .menu-button.open > div:nth-child(2) {
+    background-color: transparent;
+    transform: translateX(-50px);
+  }
+  .menu-button.open > div:nth-child(3) {
+    background-color: #FFF9F3;
+    transform: rotate(-45deg) translateY(-14.5px) translateX(7px);
+  }
+
+  .social-media {
+    display: none;
+  }
+
+  .social-media.active {
+    opacity: 0;
+    animation: fadeIn 1s ease-out;
+    animation-delay: 0.5s;
+    animation-fill-mode: forwards;
+    display: flex;
+    position: fixed;
+    background-color: transparent;
+    width: 100vw;
+    bottom: 20px;
+    z-index: 30;
+  }
+  .social-media.active > img {
+    bottom: 5vh;
+  }
+
+  .nav-item {
+    display: none;
+  }
+
+  .nav-item.active {
+    top: 0;
+    left: 100vw;
+    display: flex;
+    position: fixed;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 20;
+    height: 100vh;
+    width: 100vw;
+    background-color: #AA81AA;
+    animation: slideMenu 0.3s ease-out;
+    animation-fill-mode: forwards;
+  }
+  .nav-item.active a {
+    color: #FFF9F3;
+    opacity: 0;
+    animation: fadeIn 1s ease-out;
+    animation-fill-mode: forwards;
+  }
+  .nav-item.active :nth-child(1) {
+    animation-delay: 0;
+  }
+  .nav-item.active :nth-child(2) {
+    animation-delay: 0.1s;
+  }
+  .nav-item.active :nth-child(3) {
+    animation-delay: 0.2s;
+  }
+  .nav-item.active :nth-child(4) {
+    animation-delay: 0.3s;
+  }
+
+  .nav.active {
+    position: relative;
+  }
+  .nav.active a {
+    text-shadow: 0px 0px 10px #969696;
+    font-size: 4rem;
+    text-align: center;
+    z-index: 40;
+  }
+  .nav.active a::after {
+    height: 20px;
+    top: 50px;
+    background-color: #c1a4c1;
+  }
+}
+.nav-item.close {
+  animation: slideOutMenu 0.3s ease-out;
+  animation-fill-mode: forwards;
+}
+
+@media only screen and (max-width: 1000px) {
+  .content-card img {
+    max-width: 240px;
+  }
+
+  .card-link {
+    left: 240px;
+  }
+}
+@media only screen and (max-width: 690px) {
+  .contact-decoration::before {
+    display: none;
+  }
+
+  .contact-form-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .contact-info {
+    margin-bottom: 40px;
+    height: 400px;
+  }
+
+  .contact-form {
+    width: auto;
+    margin-right: 25px;
+    margin-left: 25px;
+  }
+  .contact-form div {
+    width: 90%;
+  }
+
+  .home-text p {
+    font-size: 1rem;
+  }
+  .home-text h2 {
+    font-size: 3.5rem;
+  }
+
+  input[type=text], textarea {
+    max-width: unset;
+    min-width: unset;
+  }
+
+  .card-desc {
+    width: 85%;
+  }
+  .card-desc h3 {
+    margin-bottom: 10px;
+  }
+
+  .card-link {
+    position: absolute;
+    top: 390px;
+    left: 0;
+  }
+
+  .content-card {
+    flex-direction: column;
+    height: 450px;
+    width: 85%;
+  }
+  .content-card img {
+    min-width: 100%;
+    height: 240px;
+    min-height: 240px;
+    margin: 0;
+    object-fit: cover;
+  }
+  .content-card h3 {
+    margin-top: 0;
+    font-size: 2rem;
+    font-weight: bold;
+  }
+}
+@media only screen and (max-height: 690px) {
+  .nav-item.active a {
+    font-size: 2rem;
+  }
+
+  .social-media.active {
+    bottom: 10px;
+  }
+  .social-media.active > img {
+    bottom: 5vh;
+    width: 36px;
+    height: 36px;
+  }
+}
+@media only screen and (max-width: 540px) {
+  .arrow {
+    animation: arrowAnim 3s ease-in-out infinite;
+    position: absolute;
+    display: block;
+    width: 32px;
+    height: 32px;
+    bottom: 7vh;
+    z-index: 20;
+  }
+
+  .shadow-container {
+    background-color: unset;
+    box-shadow: unset;
+  }
+
+  .contact-form {
+    background-color: unset;
+    box-shadow: unset;
+  }
+  .contact-form::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: #fef6f2;
+    background: linear-gradient(90deg, #fef6f2 0%, rgba(225, 184, 225, 0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fef6f2",endColorstr="#e1b8e1",GradientType=1);
+  }
+
+  .home-text {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  .home-text p:nth-child(2) {
+    display: none;
+  }
+  .home-text h2 {
+    font-size: 2.6rem;
+  }
+  .home-text > .btn {
+    display: none;
+  }
+  .home-text::after {
+    background: #fef6f2;
+    background: linear-gradient(90deg, #fef6f2 0%, rgba(225, 184, 225, 0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fef6f2",endColorstr="#e1b8e1",GradientType=1);
+  }
+
+  .section-container {
+    min-height: 510px;
+    height: 100vh;
+    background-color: black;
+  }
+
+  .footer {
+    position: relative;
+    margin: 0;
+    padding: 5px 0px 5px 0px;
+    text-align: center;
+    font-size: 0.9rem;
+  }
+
+  .bottom-links {
+    position: relative;
+    width: 100%;
+    padding: 10px 0 10px 0;
+    box-shadow: unset;
+  }
+  .bottom-links a {
+    margin: 5px;
+    padding: 0;
+    position: relative;
+    text-decoration: none;
+    color: #1E1E1E;
+    font-weight: 500;
+    letter-spacing: 1px;
+    transition: 0.3s;
+    font-size: 1.1rem;
+    text-align: center;
+  }
+  .bottom-links a:hover {
+    color: #AA81AA;
+  }
+  .bottom-links > div {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .offer-text::after {
+    height: 100%;
+    background: #fef6f2;
+    background: linear-gradient(90deg, #fef6f2 0%, rgba(225, 184, 225, 0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fef6f2",endColorstr="#e1b8e1",GradientType=1);
+  }
+}
+@media only screen and (max-width: 500px) {
+  .offer-text {
+    padding: 0 20px 0 20px;
+    height: auto;
+    min-height: 100vh;
+  }
+  .offer-text p {
+    font-size: 1rem;
+  }
+  .offer-text > div > h2 {
+    z-index: 5;
+    font-size: 1.5rem;
+  }
+  .offer-text > div > h2::after {
+    width: 90px;
+  }
+
+  .contact-decoration::before {
+    left: 25%;
+    width: 50%;
+    height: 100%;
+  }
+
+  .content-container {
+    margin-bottom: 0;
+    background-color: transparent;
+    box-shadow: unset;
+  }
+
+  .contact-form {
+    width: 100vw;
+    padding-right: 10px;
+    padding-left: 10px;
+    margin: 0;
+  }
+  .contact-form h1 {
+    font-size: 2.3rem;
+  }
+
+  .contact-info {
+    width: 100%;
+    height: 300px;
+    margin-bottom: 0px;
+  }
+  .contact-info h1, .contact-info p {
+    margin: 5px 0 5px 0;
+    text-align: center;
+  }
+  .contact-info h1 {
+    font-size: 1.6rem;
+    font-weight: 700;
+  }
+  .contact-info p {
+    font-size: 1.2rem;
+  }
+  .contact-info::after {
+    background: #fef6f2;
+    background: linear-gradient(90deg, #fef6f2 0%, rgba(225, 184, 225, 0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fef6f2",endColorstr="#e1b8e1",GradientType=1);
+  }
+
+  .card-desc {
+    margin: 15px;
+    width: 85%;
+  }
+  .card-desc h3 {
+    margin-bottom: 10px;
+  }
+
+  .card-link {
+    top: 410px;
+    left: -15px;
+  }
+  .card-link div {
+    width: 200px;
+  }
+  .card-link a .btn {
+    font-size: 1.2rem;
+  }
+
+  .content-card {
+    flex-direction: column;
+    height: 460px;
+    width: 90%;
+  }
+  .content-card img {
+    min-width: 100%;
+    height: 240px;
+    min-height: 240px;
+    margin: 0;
+    object-fit: cover;
+  }
+  .content-card h3 {
+    font-size: 1.5rem;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .menu-button {
+    position: fixed;
+    top: 15px;
+    right: 10px;
+  }
+
+  .nav-item.active a {
+    font-size: 2rem;
+  }
+  .nav-item.active a::after {
+    height: 10px;
+    top: 30px;
+  }
+
+  .social-media.active {
+    bottom: 10px;
+  }
+  .social-media.active > img {
+    bottom: 5vh;
+    width: 36px;
+    height: 36px;
+  }
+}
+.menu-element {
   margin: 0;
+  padding: 0;
+  position: absolute;
+  width: 40px;
+  height: 5px;
+  left: 0;
+  background-color: #1E1E1E;
+  border-radius: 10px;
+  transition: 0.3s;
 }
 
+@keyframes slideMenu {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100vw);
+  }
+}
+@keyframes slideOutMenu {
+  0% {
+    transform: translateX(-100vw);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@keyframes fadeIn {
+  0% {
+    transform: translateY(-40px);
+    opacity: 0;
+  }
+  30% {
+    transform: translateY(-40px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+@keyframes arrowAnim {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
 @media only screen and (max-width: 860px) {
   .home-image::before {
     width: 80%;
