--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -66,6 +66,10 @@ body{
     justify-content: space-between;
 }
 .nav-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: relative;
     margin-top: 20px;
     margin-bottom: 20px;
     background-color: #FFF9F3;
@@ -107,6 +111,9 @@ body{
     */
 }
 .nav{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     & a{
         @include marg-pad((15px 25px 15px 25px), 0);
         position: relative;
@@ -141,6 +148,10 @@ body{
 }
 
 .social-media{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
     background-color: $first-color;
     width: 340px;
     &> img{
@@ -162,7 +173,7 @@ body{
 .home-text{
     position: relative;
     width:auto;
-    padding: 50px;
+    padding: 50px 100px 50px 50px;
     background: url('../img/landingImg.jpg') no-repeat;
     background-repeat: no-repeat;
     background-position: center; 
@@ -202,8 +213,8 @@ body{
 
 .offer-text{
     position: relative;
-    width:950px;
-    padding: 50px 50px 50px 200px;
+    width:800px;
+    padding: 50px 200px 50px 200px;
     background: url('../img/landingImg.jpg') no-repeat;
     background-repeat: no-repeat;
     background-position: center; 
@@ -279,9 +290,13 @@ body{
     }
 }
 .section-container{
-    height: 710px;
-    background-color: #FFF9F3;
-    box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
+    min-height: 710px;
+    height: 83vh;
+    background-color: black;
+}
+.offer-container{
+    min-height: 710px;
+    width:100%;
 }
 .shadow-container{
     background-color: #FFF9F3;
@@ -303,12 +318,16 @@ body{
     }
 }
 .example-work{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     margin-top: 40px;
     margin-bottom: 40px;
     width: 100%;
 }
 
 .content-card{
+    flex-direction: column;
     height: 600px;
     width: 380px;
     background-color: $background-color;
@@ -324,9 +343,6 @@ body{
         margin-top: 0;
         font-size:2rem;
         font-weight: bold;
-    }
-    & p {
-
     }
 }
 .card-desc{
@@ -601,9 +617,7 @@ textarea{
         }
     }
 }
-.offer-container{
-    width:100%;
-}
+
 .portfolio-container{
     padding: 30px;
     width:1140px;
@@ -634,54 +648,660 @@ textarea{
     margin-bottom: 30px;
   }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.logo{
-    @include marg-pad((20px), 0);
-    width: 150px;
-    height: 100px;
-    background-color: gray;
-    z-index: 10;
+.nav-item{
+    flex-direction: row;
 }
-.logo-name{
-    z-index: 10;
-    margin-top: 30px;
-    &> h1,h2{
-        color: $text-color;
-        margin: 0;
+.menu-button{
+    width:0;
+    display: none;
+}
+
+.arrow {
+    display: none;
+}
+.contact-form-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.section-transition{
+    z-index: 40;
+    background: rgb(255,249,243);
+    background: -moz-linear-gradient(0deg, rgba(255,249,243,1) 5%, rgba(204,161,204,0) 17%, rgba(225,184,225,0) 83%, rgba(255,249,243,1) 95%);
+    background: -webkit-linear-gradient(0deg, rgba(255,249,243,1) 5%, rgba(204,161,204,0) 17%, rgba(225,184,225,0) 83%, rgba(255,249,243,1) 95%);
+    background: linear-gradient(0deg, rgba(255,249,243,1) 5%, rgba(204,161,204,0) 17%, rgba(225,184,225,0) 83%, rgba(255,249,243,1) 95%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fff9f3",endColorstr="#fff9f3",GradientType=1);
+}
+
+  @media only screen and (max-width:1200px)
+  {
+    .portfolio-container{
+        margin: 0 20px 100px 20px;
+        padding: 0;
+        width:100vw;
+        padding-top: 30px;
     }
+    .offer-text{
+        padding: 0 50px 0 50px;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width:100vw;
+        height: auto;
+        min-height: 100vh;
+    }
+    .contact-form-container{
+        display: flex;
+        flex-direction: column;
+    }
+    .contact-info{
+        margin-bottom: 40px;
+        height: 400px;
+    }
+    .contact-form{
+        margin-left: 0;
+    }
+    .home-text{
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        & h2 {
+            margin-top:0;
+        }
+    }
+    .nav-container{
+        max-height:0px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        display: block;
+        flex-direction: unset;
+        justify-content: unset;
+        & h1 {
+            display: none;
+        }
+    }
+    .content-container{
+        width: 100vw;
+    }
+    
+    .card-desc{
+        width: 50%;
+    }
+    .card-link{
+        position: absolute;
+        top: 180px;
+        left:380px;
+    }
+    .example-work{
+        justify-content: center;
+        width:100vw;
+        flex-direction: column;
+    }
+    .content-card{
+        position: relative;
+        flex-wrap: wrap;
+        flex-direction: row;
+        height: 240px;
+        width: 90vw;
+        margin-top:10px;
+        margin-bottom:10px;
+        margin-left: 50%;
+        transform: translateX(-50%);
+        & img {
+            min-width: 240px;
+            height: 240px;
+            min-height: 240px;
+            margin: 0;
+            object-fit: cover;
+        }
+    
+        & h3 {
+            margin-top: 0;
+            font-size:2rem;
+            font-weight: bold;
+        }
+    }
+    .home-image{
+        display: none;
+        position: fixed;
+        min-height:unset;
+        min-width:unset;
+        width:unset;
+        box-shadow: unset;
+        z-index: unset;
+        &>:nth-child(3){
+            top:unset;
+            font-weight: unset;
+            letter-spacing: unset;
+            font-size:unset;
+        }
+        & > img{
+            position: relative;
+            object-fit: unset;
+            max-width:unset;
+            min-height:unset;
+            max-height:unset;
+            transition: unset;
+        }
+    }
+
+
+    .section-container{
+        width:100vw;
+        height: 100vh;
+    }
+      .page-container{
+          width: 100vw;
+      }
+      .offer-container{
+          width: 100vw;
+      }
+      .nav-container{
+          width:100%;
+      }
+
+    .menu-button {
+        top: 33px;
+        right:30px;
+        z-index: 30;
+      display: flex;
+      position: fixed;
+      width: 40px;
+      height: 36px;
+      cursor: pointer;
+  
+      & > div:nth-child(1) {
+          background-color: $text-color;
+          top: 0;
+      }
+  
+      & > div:nth-child(2) {
+          background-color: $text-color;
+          top: 15px;
+      }
+  
+      & > div:nth-child(3) {
+          background-color: $text-color;
+          top: 30px;
+      }
+  
+      &.hover > div:nth-child(1) {
+          transform: translateY(-3px);
+          filter: brightness(80%);
+      }
+  
+      &.hover > div:nth-child(2) {
+          filter: brightness(80%);
+      }
+  
+      &.hover > div:nth-child(3) {
+          transform: translateY(3px);
+          filter: brightness(80%);
+      }
+  
+      &.open > div:nth-child(1) {
+          background-color: $background-color;
+          transform: rotate(45deg) translateY(14.5px) translateX(7px);
+      }
+  
+      &.open > div:nth-child(2) {
+          background-color: transparent;
+          transform: translateX(-50px);
+      }
+  
+      &.open > div:nth-child(3) {
+          background-color: $background-color;
+          transform: rotate(-45deg) translateY(-14.5px) translateX(7px);
+      }
+  }
+    .social-media{
+        display:none;
+    }
+    .social-media.active{
+        opacity: 0;
+        animation: fadeIn 1s ease-out;
+        animation-delay: .5s;
+        animation-fill-mode: forwards;
+        display: flex;
+        position:fixed;
+        background-color: transparent;
+        width: 100vw;
+        bottom: 20px;
+        z-index: 30;
+        &> img{
+            bottom:5vh;
+        }
+    }
+    .nav-item{
+        display: none;
+    }
+    .nav-item.active{
+        top:0;
+        left:100vw;
+        display: flex;
+        position: fixed;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        z-index: 20;
+        height: 100vh;
+        width: 100vw;
+        background-color: $first-color;
+        animation: slideMenu 0.3s ease-out;
+        animation-fill-mode: forwards;
+        & a {
+            color:$background-color;
+            opacity: 0;
+            animation: fadeIn 1s ease-out;
+            animation-fill-mode: forwards;
+        }
+        & :nth-child(1){
+            animation-delay: 0;
+        }
+        & :nth-child(2){
+            animation-delay: .1s;
+        }
+        & :nth-child(3){
+            animation-delay: .2s;
+        }
+        & :nth-child(4){
+            animation-delay: .3s;
+        }
+    }
+    .nav.active{
+        position: relative;
+        & a{
+            text-shadow: 0px 0px 10px rgba(150, 150, 150, 1);
+            font-size: 4rem;
+            text-align: center;
+            z-index: 40;
+            &::after {
+                height:20px;
+                top:50px;
+                background-color: $first-color-hover;
+            }
+        }
+    }
+  }
+  .nav-item.close{
+    animation: slideOutMenu 0.3s ease-out;
+    animation-fill-mode: forwards;
 }
+  @media only screen and (max-width:1000px)
+  {
+    .content-card{
+        & img {
+            max-width: 240px;
+        }
+    }
+    .card-link{
+        left:240px;
+    }
+  }
+  @media only screen and (max-width:690px)
+  {
+    .contact-decoration{
+        &::before{
+            display: none;
+        }
+    }
+    .contact-form-container{
+        display: flex;
+        flex-direction: column;
+    }
+    .contact-info{
+        margin-bottom: 40px;
+        height: 400px;
+    }
+    .contact-form{
+        width: auto;
+        margin-right: 25px;
+        margin-left: 25px;
+        & div {
+            width: 90%;
+        }
+    }
+      .home-text{
+          & p{
+              font-size: 1rem;
+          }
+          & h2{
+            font-size: 3.5rem;
+        }
+    }
+    input[type=text],textarea {
+        max-width: unset;
+        min-width: unset;
+    }
+    .card-desc{
+        & h3{
+            margin-bottom:10px;
+        }
+       width:85%;
+    }
+    .card-link{
+        position: absolute;
+        top:390px;
+        left:0;
+    }
+    .content-card{
+        flex-direction: column;
+        height: 450px;
+        width: 85%;
+        & img {
+            min-width: 100%;
+            height: 240px;
+            min-height: 240px;
+            margin: 0;
+            object-fit: cover;
+        }
+    
+        & h3 {
+            margin-top: 0;
+            font-size:2rem;
+            font-weight: bold;
+        }
+    }
+  }
+  @media only screen and (max-height:690px)
+  {
+    .nav-item.active{
+        & a {
+            font-size: 2rem;
+        }
+    }
+    .social-media.active{
+        bottom: 10px;
+        &> img{
+            bottom:5vh;
+            width: 36px;
+            height:36px;
+        }
+    }
+  }
+  @media only screen and (max-width:540px)
+  {
+    .arrow {
+        animation: arrowAnim 3s ease-in-out infinite;
+        position: absolute;
+        display: block;
+        width: 32px;
+        height: 32px;
+        bottom: 7vh;
+        z-index: 20;
+    }
+    .shadow-container{
+        background-color: unset;
+        box-shadow: unset;
+    }
+    .contact-form {
+        background-color: unset;
+        box-shadow: unset;
+        &::after{
+            position: absolute;
+            top: 0;
+            left: 0;
+            content: "";
+            width: 100%;
+            height: 100%;
+            background: rgb(254,246,242);
+background: -moz-linear-gradient(90deg, rgba(254,246,242,1) 0%, rgba(225,184,225,0) 100%);
+background: -webkit-linear-gradient(90deg, rgba(254,246,242,1) 0%, rgba(225,184,225,0) 100%);
+background: linear-gradient(90deg, rgba(254,246,242,1) 0%, rgba(225,184,225,0) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fef6f2",endColorstr="#e1b8e1",GradientType=1);
+        }
+    }
+    .home-text{
+        padding-left: 30px;
+        padding-right: 30px;
+        & p:nth-child(2){
+            display: none;
+        }
+        & h2{
+          font-size: 2.6rem;
+      }
+      & > .btn {
+          display: none;
+      }
+      &::after{
+        background: rgb(254,246,242);
+background: -moz-linear-gradient(90deg, rgba(254,246,242,1) 0%, rgba(225,184,225,0) 100%);
+background: -webkit-linear-gradient(90deg, rgba(254,246,242,1) 0%, rgba(225,184,225,0) 100%);
+background: linear-gradient(90deg, rgba(254,246,242,1) 0%, rgba(225,184,225,0) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fef6f2",endColorstr="#e1b8e1",GradientType=1);
+    }
+    }
+    .section-container{
+        min-height: 510px;
+        height: 100vh;
+        background-color: black;
+    }
+    .footer{
+        position: relative;
+        @include marg-pad((0), (5px 0px 5px 0px));
+        text-align: center;
+        font-size:0.9rem;
+    }
+    .bottom-links{
+        position: relative;
+        width:100%;
+        padding: 10px 0 10px 0;
+        box-shadow: unset;
+        & a{
+            @include marg-pad((5px), 0);
+            position: relative;
+            text-decoration: none;
+            color: $text-color;
+            font-weight: 500;
+            letter-spacing: 1px;
+            transition: .3s;
+            font-size: 1.10rem;
+            text-align: center;
+            &:hover {
+                color: $first-color;
+            }
+        }
+        & > div {
+            display: flex;
+            flex-direction: column;
+        }
+    }
+    .offer-text{
+        &::after{
+            height: 100%;
+            background: rgb(254,246,242);
+background: -moz-linear-gradient(90deg, rgba(254,246,242,1) 0%, rgba(225,184,225,0) 100%);
+background: -webkit-linear-gradient(90deg, rgba(254,246,242,1) 0%, rgba(225,184,225,0) 100%);
+background: linear-gradient(90deg, rgba(254,246,242,1) 0%, rgba(225,184,225,0) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fef6f2",endColorstr="#e1b8e1",GradientType=1);
+        }
+    }
+    
+  }
+  @media only screen and (max-width:500px){
+    .offer-text{
+        padding: 0 20px 0 20px;
+        height: auto;
+        min-height: 100vh;
+        & p {
+            font-size: 1rem;
+        }
+        & > div > h2{
+            z-index: 5;
+            font-size: 1.5rem;
+            &::after{
+                width:90px;
+            }
+        }
+    }
+    .contact-decoration{
+        &::before{
+            left: 25%;
+            width: 50%;
+            height: 100%;
+        }
+    }
+      .content-container{
+          margin-bottom: 0;
+          background-color: transparent;
+        box-shadow: unset;
+      }
+    .contact-form{
+        width: 100vw;
+        padding-right: 10px;
+        padding-left: 10px;
+        margin: 0;
+        & h1{
+            font-size: 2.3rem;
+        }
+    }
+    .contact-info{
+        width: 100%;
+        height:300px;
+        & h1,p{
+            margin: 5px 0 5px 0;
+            text-align: center;
+        }
+        & h1{
+            font-size: 1.6rem;
+            font-weight: 700;
+        }
+        & p {
+            font-size: 1.2rem;
+        }
+        margin-bottom: 0px;
+        &::after{
+            background: rgb(254,246,242);
+background: -moz-linear-gradient(90deg, rgba(254,246,242,1) 0%, rgba(225,184,225,0) 100%);
+background: -webkit-linear-gradient(90deg, rgba(254,246,242,1) 0%, rgba(225,184,225,0) 100%);
+background: linear-gradient(90deg, rgba(254,246,242,1) 0%, rgba(225,184,225,0) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fef6f2",endColorstr="#e1b8e1",GradientType=1);
+        }
+    }
+    .card-desc{
+        margin: 15px;
+        & h3{
+            margin-bottom:10px;
+        }
+       width:85%;
+    }
+    .card-link{
+        top:410px;
+        left:-15px;
+        & div {
+            width: 200px;
+        }
+        & a .btn {
+            font-size: 1.2rem;
+        }
+    }
+    .content-card{
+        flex-direction: column;
+        height: 460px;
+        width: 90%;
+        & img {
+            min-width: 100%;
+            height: 240px;
+            min-height: 240px;
+            margin: 0;
+            object-fit: cover;
+        }
+    
+        & h3 {
+            font-size:1.5rem;
+        }
+    }
+  }
+  @media only screen and (max-width:400px)
+  {
+    .menu-button {
+        position: fixed;
+        top:15px;
+        right:10px;
+    }
+    .nav-item.active{
+        & a {
+            font-size: 2rem;
+            &::after {
+                height:10px;
+                top:30px;
+            }
+        }
+    }
+    .social-media.active{
+        bottom: 10px;
+        &> img{
+            bottom:5vh;
+            width: 36px;
+            height:36px;
+        }
+    }
+  }
+
+.menu-element {
+    @include marg-pad(0,0);
+    position: absolute;
+    width: 40px;
+    height: 5px;
+    left: 0;
+    background-color: $text-color;
+    border-radius: 10px;
+    transition: 0.3s;
+}
+@keyframes slideMenu {
+    0%   {transform: translateX(0);}
+    100% {transform: translateX(-100vw);}
+  }
+  @keyframes slideOutMenu {
+    0%   {transform: translateX(-100vw);}
+    100% {transform: translateX(0);}
+  }
+  @keyframes fadeIn{
+    0%   {transform: translateY(-40px); opacity: 0;}
+    30%   {transform: translateY(-40px); opacity: 0;}
+    100% {transform: translateY(0px); opacity: 1;}
+  }
+  @keyframes arrowAnim{
+    0%   {transform: translateY(0px);}
+    50%   {transform: translateY(-5px);}
+    100% {transform: translateY(0px);}
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media only screen and (max-width: 860px){
     .home-image{
