--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -16,7 +16,6 @@ $background-color: #FFF9F3;
 
 html {
     font-size: 16px;
-    overflow-x: hidden;
 }
 body{
     font-family: 'Trebuchet MS', sans-serif;
@@ -24,6 +23,7 @@ body{
     padding:0;
     background-color: $background-color;
 }
+
 .mt-30{
     margin-top: 30px;
 }
@@ -37,8 +37,8 @@ body{
     margin-bottom: 120px;
 }
 .app-container{
-    max-width: 100vw;
-    width: 100vw;
+    max-width: 100%;
+    width: 100%;
 }
 .page-container{
    width:1200px;
@@ -171,10 +171,10 @@ body{
     box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
 }
 .home-text{
+    height: 100%;
     position: relative;
     width:auto;
     padding: 50px 100px 50px 50px;
-    background: url('../img/landingImg.jpg') no-repeat;
     background-repeat: no-repeat;
     background-position: center; 
     -webkit-background-size: cover;
@@ -215,7 +215,7 @@ body{
     position: relative;
     width:800px;
     padding: 50px 200px 50px 200px;
-    background: url('../img/landingImg.jpg') no-repeat;
+    height: 100%;
     background-repeat: no-repeat;
     background-position: center; 
     -webkit-background-size: cover;
@@ -280,7 +280,7 @@ body{
         letter-spacing: 18px;
         font-size:1.7rem;
     }
-    & > img{
+    & > .gatsby-image-wrapper{
         position: relative;
         object-fit: cover;
         max-width:100%;
@@ -331,6 +331,12 @@ body{
     height: 600px;
     width: 380px;
     background-color: $background-color;
+    & > .gatsby-image-wrapper {
+        width: 380px;
+        height: 340px;
+        min-height: 340px;
+        max-height: 340px;
+    }
     & img {
         width: 380px;
         height: 340px;
@@ -351,7 +357,6 @@ body{
 }
 .card-link{
     height: 60px;
-    width: 100%;
     margin-left: 30px;
     & a{
         text-decoration: none;
@@ -373,7 +378,6 @@ body{
 .contact-form{
     z-index: 1;
     position: relative;
-    background: url('../img/landingImg.jpg') no-repeat;
     background-repeat: no-repeat;
     background-position: center; 
     -webkit-background-size: cover;
@@ -403,9 +407,8 @@ body{
     }
     
     width: 600px;
-    background-color: #FFF9F3;
     box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
-    margin: 45px 0 45px 45px;
+    margin: 45px 0 45px 0px;
     padding: 30px 30px 20px 30px;
     &::after{
         position: absolute;
@@ -422,7 +425,7 @@ body{
 }
 .contact-info{
     position: relative;
-    background: url('../img/landingImg.jpg') no-repeat;
+    
     background-repeat: no-repeat;
     background-position: center; 
     -webkit-background-size: cover;
@@ -547,12 +550,15 @@ textarea{
     @include marg-pad((30px 0 0 0), (5px));
     height: 20px;
     border-top:1px lightgray solid;
-    width:100vw;
+    width:100%;
     text-align: center;
     bottom: 0;
     left: 0;
     color: $background-color;
     background-color: $first-color;
+}
+.portfolio-width{
+    width: 100%;
 }
 .bottom-links{
     position: fixed;
@@ -656,6 +662,10 @@ textarea{
     display: none;
 }
 
+.contact-square-background{
+    margin-left: 40px;
+    margin-right: 40px;
+}
 .arrow {
     display: none;
 }
@@ -666,6 +676,7 @@ textarea{
     align-items: center;
     width: 100%;
 }
+
 .section-transition{
     z-index: 40;
     background: rgb(255,249,243);
@@ -677,14 +688,18 @@ textarea{
 
   @media only screen and (max-width:1200px)
   {
+    .my-masonry-grid_column {
+        padding-left: 10px; /* gutter size */
+      }
     .portfolio-container{
-        margin: 0 20px 100px 20px;
+
+        margin: 0 0 100px 0;
         padding: 0;
-        width:100vw;
+        width:100%;
         padding-top: 30px;
     }
     .offer-text{
-        padding: 0 50px 0 50px;
+        padding: 0;
         text-align: center;
         display: flex;
         justify-content: center;
@@ -697,9 +712,10 @@ textarea{
     .contact-form-container{
         display: flex;
         flex-direction: column;
+        padding-bottom: 40px;
     }
     .contact-info{
-        margin-bottom: 40px;
+        box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
         height: 400px;
     }
     .contact-form{
@@ -725,7 +741,7 @@ textarea{
         }
     }
     .content-container{
-        width: 100vw;
+        width: 100%;
     }
     
     .card-desc{
@@ -738,8 +754,11 @@ textarea{
     }
     .example-work{
         justify-content: center;
-        width:100vw;
+        width:100%;
         flex-direction: column;
+        margin-top: 40px;
+        margin-bottom: 40px;
+        
     }
     .content-card{
         position: relative;
@@ -751,12 +770,11 @@ textarea{
         margin-bottom:10px;
         margin-left: 50%;
         transform: translateX(-50%);
-        & img {
-            min-width: 240px;
-            height: 240px;
+        & > .gatsby-image-wrapper {
+            max-height: 240px;
             min-height: 240px;
-            margin: 0;
-            object-fit: cover;
+            min-width: 240px;
+            min-height: 240px;
         }
     
         & h3 {
@@ -791,14 +809,14 @@ textarea{
 
 
     .section-container{
-        width:100vw;
+        width:100%;
         height: 100vh;
     }
       .page-container{
-          width: 100vw;
+          width: 100%;
       }
       .offer-container{
-          width: 100vw;
+          width: 100%;
       }
       .nav-container{
           width:100%;
@@ -869,7 +887,7 @@ textarea{
         display: flex;
         position:fixed;
         background-color: transparent;
-        width: 100vw;
+        width: 100%;
         bottom: 20px;
         z-index: 30;
         &> img{
@@ -881,7 +899,7 @@ textarea{
     }
     .nav-item.active{
         top:0;
-        left:100vw;
+        left:100%;
         display: flex;
         position: fixed;
         flex-direction: column;
@@ -889,7 +907,7 @@ textarea{
         align-items: center;
         z-index: 20;
         height: 100vh;
-        width: 100vw;
+        width: 100%;
         background-color: $first-color;
         animation: slideMenu 0.3s ease-out;
         animation-fill-mode: forwards;
@@ -933,6 +951,9 @@ textarea{
 }
   @media only screen and (max-width:1000px)
   {
+    .gatsby-image-wrapper {
+        max-width: 100px;
+    }
     .content-card{
         & img {
             max-width: 240px;
@@ -944,6 +965,32 @@ textarea{
   }
   @media only screen and (max-width:690px)
   {
+    .contact-square-background{
+        margin-right: 0px;
+    }
+    .content-card {
+        & > .gatsby-image-wrapper {
+            max-width: 100%;
+            min-width: 100%;
+            width: 100%;
+    
+        }
+    }
+    .contact-square-background{
+        margin-left: 0;
+        position:relative;
+        &::before{
+            left: 20%;
+            top: -30px;
+            content:"";
+            z-index: 0;
+            width: 60%;
+            height:1130px;
+            position: absolute;
+            background-color: $first-color;
+        }
+        margin-bottom: 30px;
+    }
     .contact-decoration{
         &::before{
             display: none;
@@ -954,13 +1001,13 @@ textarea{
         flex-direction: column;
     }
     .contact-info{
-        margin-bottom: 40px;
+        padding-bottom: 40px;
         height: 400px;
     }
     .contact-form{
         width: auto;
-        margin-right: 25px;
-        margin-left: 25px;
+        margin-right: 0px;
+        margin-left: 0px;
         & div {
             width: 90%;
         }
@@ -1022,9 +1069,16 @@ textarea{
             height:36px;
         }
     }
+    
   }
   @media only screen and (max-width:540px)
   {
+    .offer-text{
+        width: 100%;
+    }
+    .portfolio-container{
+        margin: 0;
+    }
     .arrow {
         animation: arrowAnim 3s ease-in-out infinite;
         position: absolute;
@@ -1035,12 +1089,10 @@ textarea{
         z-index: 20;
     }
     .shadow-container{
-        background-color: unset;
-        box-shadow: unset;
+        background-color: $background-color;
     }
     .contact-form {
         background-color: unset;
-        box-shadow: unset;
         &::after{
             position: absolute;
             top: 0;
@@ -1123,11 +1175,22 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fef6f2",endCo
     
   }
   @media only screen and (max-width:500px){
+
+    .my-masonry-grid {
+        margin-left: -0px; /* gutter size offset */
+        margin-right: 10px;
+      }
+    .contact-square-background{
+        margin-left: 0px;
+        &::before{
+            height:870px;
+        }
+    }
     .offer-text{
-        padding: 0 20px 0 20px;
         height: auto;
         min-height: 100vh;
         & p {
+            padding: 0 20px 0 20px;
             font-size: 1rem;
         }
         & > div > h2{
@@ -1151,17 +1214,20 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fef6f2",endCo
         box-shadow: unset;
       }
     .contact-form{
-        width: 100vw;
-        padding-right: 10px;
-        padding-left: 10px;
+        width: 100%;
+        padding-right: 0px;
+        padding-left: 0px;
         margin: 0;
         & h1{
             font-size: 2.3rem;
+            margin:  0 40px 0 40px;
         }
     }
     .contact-info{
         width: 100%;
         height:300px;
+        margin-bottom: 0px;
+        padding-bottom: 0px;
         & h1,p{
             margin: 5px 0 5px 0;
             text-align: center;
@@ -1173,7 +1239,6 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fef6f2",endCo
         & p {
             font-size: 1.2rem;
         }
-        margin-bottom: 0px;
         &::after{
             background: rgb(254,246,242);
 background: -moz-linear-gradient(90deg, rgba(254,246,242,1) 0%, rgba(225,184,225,0) 100%);
@@ -1202,18 +1267,13 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fef6f2",endCo
     .content-card{
         flex-direction: column;
         height: 460px;
-        width: 90%;
-        & img {
-            min-width: 100%;
-            height: 240px;
-            min-height: 240px;
-            margin: 0;
-            object-fit: cover;
-        }
     
         & h3 {
             font-size:1.5rem;
         }
+    }
+    .contact-form-container{
+        align-items: unset;
     }
   }
   @media only screen and (max-width:400px)
@@ -1254,10 +1314,10 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fef6f2",endCo
 }
 @keyframes slideMenu {
     0%   {transform: translateX(0);}
-    100% {transform: translateX(-100vw);}
+    100% {transform: translateX(-100%);}
   }
   @keyframes slideOutMenu {
-    0%   {transform: translateX(-100vw);}
+    0%   {transform: translateX(-100%);}
     100% {transform: translateX(0);}
   }
   @keyframes fadeIn{
