--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -93,6 +93,10 @@ body {
 
 .l-calc{left: calc((100vw - 1440px)/2 - (((100vw - 1440px)/2) * 2) );}
 
+.landing{
+    height: 800px;
+}
+
 .h-100vh {height: 100vh;}
 .h-100prec {height:100%;}
 .h-90prec {height:90%;}
@@ -151,6 +155,11 @@ body {
     -moz-box-shadow: -1px 0px 5px -1px rgba(0,0,0,0.75);}
 
 .border-none{border: none;}
+
+.styled-link {
+    color: $text-color;
+    border-bottom: 1px $text-color;
+}
 
 .card-left{
     padding: 30px;
@@ -477,6 +486,17 @@ input:-webkit-autofill {
     }
 }
 @media only screen and (max-width:900px){
+    .langLink{
+        color: white;
+    }
+    .faceBookImg{
+        filter: invert(100%) ;
+
+    }
+    .landing{
+        min-height: 500px;
+        height: 100vh;
+    }
     .logo{
         top: 0px;
         left: -15px;
@@ -555,7 +575,7 @@ input:-webkit-autofill {
       }
     .home-text-wrapper{width:450px}
     .text-base{font-size: 1rem;}
-    .text-xl{font-size: 3.5rem;}
+    .text-xl{font-size: 3.1rem;}
     .menu-button {
         top: 30px;
         right: 30px;
@@ -631,8 +651,18 @@ input:-webkit-autofill {
         max-width: 100%
     }
 }
+@media only screen and (max-height: 560px) and (max-width: 900px){
+    .nav-link.active{
+        font-size: 2rem;
+        margin-bottom: 5px;
+        margin-top: 5px;
+    }
+}
 @media only screen and (max-width:540px){
-    
+    .landing{
+        min-height: 500px;
+        height: 100vh;
+    }
     .card-image{
     
         & > .gatsby-image-wrapper{
