--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -94,7 +94,7 @@ body {
 .l-calc{left: calc((100vw - 1440px)/2 - (((100vw - 1440px)/2) * 2) );}
 
 .landing{
-    height: 800px;
+    height: 750px;
 }
 
 .h-100vh {height: 100vh;}
@@ -119,6 +119,7 @@ body {
 .mt-200{margin-top: 200px;}
 .mr-auto{margin-right:auto;}
 .ml-20{margin-left:20px;}
+.mb-10{margin-bottom:10px;}
 
 .p-20{padding:20px;}
 .p-30{padding: 30px}
